[metadata]
name = ruuvitag-form
version = 0.1.0
author = Fredrik Salomonsson
author_email = plattfot@gmail.com
url = https://github.com/plattfot/ruuvitag-form
license = GNU General Public License v3 (GPLv3) (GPL)

[options]
package_dir =
    = src
packages = find_namespace:
entry_points =
    [console_scripts]
    ruuvitag-form = ruuvitag.form:main
install_requires =
    pycurl >= 7.43.0.6

[options.packages.find]
where = src

